* Bugfixes for localization. * Some ternary checks written in the calendar template are carried into the component itself to keep the html template slightly more readable. * Better naming for some of the functions and variables. * Some line comments are added.

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -35,3 +35,6 @@
     margin-bottom: 16px;
     margin-top: 16px;
 }
+.label-column {
+    text-transform: capitalize;
+}
